[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/MainGame.gd" type="Script" id=2]
[ext_resource path="res://scenes/Asteroid.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/bg.png" type="Texture" id=5]
[ext_resource path="res://assets/sfx/explosion.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/health_bar.tres" type="Theme" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.160004, 0.418289, 0, 0, 0, 0, 1023.18, 1.91661, 0, 0, 0, 0, 1024.68, 601.239, 0, 0, 0, 0, -1.65829, 602.738, 0, 0, 0, 0, -0.160004, 0.418289 )
}

[node name="MainGame" type="Node2D"]
script = ExtResource( 2 )
Asteroid = ExtResource( 3 )
Explosion = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = -537.0
margin_top = -272.0
margin_right = 1627.0
margin_bottom = 928.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spaceship" parent="." instance=ExtResource( 1 )]
position = Vector2( 516.916, 299.661 )

[node name="AsteroidGenerationPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AsteroidGenerationPlace" type="PathFollow2D" parent="AsteroidGenerationPath"]
position = Vector2( -0.160004, 0.418289 )
rotation = 0.00146414

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SpaceshipHealth" type="ProgressBar" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 40.0
theme = ExtResource( 7 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="shoot" from="Spaceship" to="." method="_on_Spaceship_shoot"]
[connection signal="took_damage" from="Spaceship" to="." method="_on_Spaceship_took_damage"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
